# Undergraduate-Projects

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  streamlit_app.py
ECO 317 Project 1/: README.md  fix_md2tex.py  main (LAPTOP-D946KC0E's conflicted copy 2026-02-16).tex  main (LAPTOP-D946KC0E's conflicted copy 2026-02-16).toc  main.out  main.tex  study_sheet.tex
ECO 317 Project 2/: plan.out
ECO 317 Project 3/: GRADING_REPORT.docx  README.md  app.py  plan.aux  plan.tex
Econ - Macro - Assignment 2/: README.md
Econ - Macro - Capstone Engine/: README.md  master_app.py  requirements.txt
Econ - Macro - Data Suite Report/: FEATURE_SUMMARY.md  README.md  main (LAPTOP-D946KC0E's conflicted copy 2026-02-16).aux  main (LAPTOP-D946KC0E's conflicted copy 2026-02-16).out  main.aux  main.toc  main.txt  md2tex.py  pyproject.toml  streamlit_app.py
Econ - Macro - Data Suite Report/legacy_pages/: 04_Analysis.py
Econ - Macro - Data Suite Report/src/finrec/providers/: __init__.py
Econ - Macro - Data Suite Report/src/finrec/providers/market/: __init__.py  fmp.py
Econ - Macro - Data Suite Report/src/finrec/recipes/: base.py
Econ - Macro - Data Suite Report/src/finrec/recipes/forecast/: arima.py
Econ - Macro - Data Suite Report/src/finrec/recipes/timeseries/: rolling_zscore.py
Econ - Macro - Data Suite Report/src/finrec/ui/: timeseries_catalog.py
Econ - Macro - Data Suite Report/tests/: test_forecasting_recipes.py
Econ - Macro - FinRec Data Suite/: README.md
Econ - Macro - Fiscal Policy DSGE/: GRADING_REPORT.md  README.md  plan.out  prompt_log.md
(+481 files in other folders)
