[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macro-project-1-data-suite"
version = "0.1.0"
description = "Local financial/economic data + news sentiment + econometrics recipes app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "streamlit>=1.31",
  "streamlit-autorefresh>=1.0.1",
  "pandas>=2.1",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4",
  "pytest>=8.0",
  "plotly>=5.20.0",
]
market = [
  "yfinance>=0.2.36",
  "requests>=2.31.0",
]
macro = [
  "pandas-datareader>=0.10.0",
]
news = [
  "requests>=2.31.0",
]
ml = [
  "transformers>=4.41.0",
  "torch>=2.2.0",
]
econ = [
  "statsmodels>=0.14.0",
]
forecast = [
  "statsmodels>=0.14.0",
  "scikit-learn>=1.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
